--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heroicons": "^2.0.18",
     "next": "13.4.4",
     "postcss": "8.4.24",
+    "public": "^0.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
